2012-06-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Remove redundant source/licence references for mingwrt/w32api.

	* mingw32/mingw32-runtime.xml (mingwrt, w32api): Make...
	(source, licence): ...these references at package level generic wrt
	compression format; remove redundant duplicates at release level.
	Regenerate and republish LZMA format manifest.
	* mingw32/issue.log: Updated accordingly.

2012-06-30  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingwrt.

	* mingw32/mingw32-runtime.xml: Update mingwrt to 3.20-2.
	* mingw32/issue.log: Updated accordingly.

2012-06-07  Cesar Strauss  <cestrauss@gmail.com>

	Update & publish mingw32-gcc4.

	* mingw32/mingw32-gcc4.xml: Update to 4.7.0-1.
	* mingw32/issue.log: Update accordingly.

2012-05-16  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update and publish msys-zlib and mingw32-zlib.

	* msys/msys-zlib.xml: Update to 1.2.7-1. Add new minizip-bin,
	libminizip-dev, and libminizip-dll-1 components.
	* msys/issue.log: Update accordingly.
	* mingw32/mingw32-zlib.xml: Update to 1.2.7-1. Add new
	minizip-bin, libminizip-dev, and libminizip-dll-1 components.
	* mingw32/issue.log: Update accordingly.

2012-05-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Reorder dependencies for mingw32-gcc4.

	* mingw32/mingw32-gcc4.xml (gcc-core): Factor out dependency
	declarations common to all releases; order all version specific
	references before version agnostic references, to avoid possible
	accidental scheduling of mismatched versions for installation.
	(gcc-ada): Factor out common dependency declarations.
	Regenerate, and republish.

	* mingw32/issue.log: Update accordingly.

2012-04-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix post/pre-remove conflict in mingw-get.xml scripting.

	* mingw32/mingw32-mingw-get.xml (mingw-get-bin.post-remove): Can't
	use post-remove script here, after helper modules removed; replace...