@@ -35,7 +35,7 @@
   dac44763209525b04cbaab271524991a9db920d0 2011101100 mingw32-expat.xml
   3df1f38d5924070bb1a51e32fb4e8f9ffd895690 2011101100 mingw32-gcc-tools.xml
   9d1d9deeccee4fb04f2944e3cd5e7b85757308ce 2011050500 mingw32-gcc3.xml
-  ab840f7adf0f84af5f907aa427b898da19507818 2012060600 mingw32-gcc4.xml
+  f08f7a153a9daf968edc3df3af0c370cf6124d90 2012071200 mingw32-gcc4.xml
   06db4b622b4593da5a9c6a9a9eae387fd78174bb 2012021100 mingw32-gdb.xml
   8ba336812b4016c512a3e7239a0948a3a494b6f4 2011101100 mingw32-gendef.xml
   352ff30d7d315b5d5e039ad0abce2ec4019566aa 2011110902 mingw32-gettext.xml
