@@ -1,3 +1,12 @@
+2012-11-05  Cesar Strauss  <cestrauss@gmail.com>
+
+	Add versioned dependencies on mingwrt to mingw32-gcc4.
+
+	* mingw32/mingw32-gcc4.xml (mingw32-gcc-bin): Add versioned
+	dependencies on mingwrt.
+	Regenerate and republish LZMA format manifest.
+	* mingw32/issue.log: Update accordingly.
+
 2012-06-30  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Remove redundant source/licence references for mingwrt/w32api.
